@@ -1,3 +1,8 @@
+2004-10-18 Bart Hakvoort  <gparted@users.sf.net>
+
+	* src/Dialog_Partition_New.cc: changed width of optionmenus from 150 to 160 pixels. (in certain langs the strings didn't fit)
+	* src/VBox_VisualDisk.cc: used/unused legend doesn't have to show up if there's only linux-swap. 
+
 2004-10-17 Bart Hakvoort  <gparted@users.sf.net>
 
 	* src/Dialog_About.cc (Show_Credits): Fixed Gtk-Warning with unknown pango markup and placed a 5 pixel-border around 
